Closed Bug 463295 Opened 16 years ago Closed 16 years ago

crash if geolocation timeout < 300ms

Categories

(Core :: DOM: Geolocation, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.1b2

People

(Reporter: dougt, Assigned: dougt)

Details

(Keywords: fixed1.9.1)

Attachments

(1 file)

basically we are passing a nsnull to update() which is dereferenced.
Attached patch patch v.1Splinter Review
Attachment #346536 - Flags: review?(jst)
Flags: blocking1.9.1?
Attachment #346536 - Flags: superreview+
Attachment #346536 - Flags: review?(jst)
Attachment #346536 - Flags: review+
Flags: blocking1.9.1? → blocking1.9.1+
Target Milestone: --- → mozilla1.9.1b2
Comment on attachment 346536 [details] [diff] [review]
patch v.1

a=beltzner since it comes in a bundle with the blockers
pushed a1364547a182.
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: