Bug 463295 - crash if geolocation timeout < 300ms. r/sr=jst